Ajuste na grafia de algumas palavras

--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de Compras</title>
 </head>
+
 <body>
-  <h1>Atividades Urgêntes</h1>
-  <p>Essa lista descreve todas as atividades que precisam serem feitas hoje!</p>
+  <h1>Atividades Urgentes</h1>
+  <p>Essa lista descreve todas as atividades que precisam ser feitas hoje!</p>
   <ol type="I">
     <li><b>Arrumação das Ferramentas</b></li>
-      <ul>
-        <img src="img/ferramentas.jpeg" alt="Foto de exemplo de ferramentas">
-        <li>Separar por tipo de ferramentas</li>
-        <li>Etiquetar as ferramentas</li>
-        <li>Inventariar as ferramentas</li>
-      </ul>
+    <ul>
+      <img src="img/ferramentas.jpeg" alt="Foto de exemplo de ferramentas">
+      <li>Separar por tipo de ferramentas</li>
+      <li>Etiquetar as ferramentas</li>
+      <li>Inventariar as ferramentas</li>
+    </ul>
     <li><b>Levantamento dos equipamentos</b></li>
-      <ul>
-        <img src="img/computador.jpg" alt="Exemplo de um computador">
-        <li>Separar os equipamentos por tipo (Computadores, Notebook, roteadores, etc.)</li>
-        <li>Verificar a normativa interna sobre transporte e armazenamento dos equipamentos.</li>
-        <li>Etiquetar e inventariar os equipamentos</li>
-      </ul>
-    <li>fazer um relatório sobre o que foi inventáriado no Estoque</li>
+    <ul>
+      <img src="img/computador.jpg" alt="Exemplo de um computador">
+      <li>Separar os equipamentos por tipo (Computadores, Notebook, roteadores, etc.)</li>
+      <li>Verificar a normativa interna sobre transporte e armazenamento dos equipamentos.</li>
+      <li>Etiquetar e inventariar os equipamentos</li>
+    </ul>
+    <li><b>Fazer um relatório sobre o que foi inventáriado no Estoque</b></li>
   </ol>
 </body>
+
 </html>
